<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="android.view.View" />

        <variable
            name="shareActivityViewModel"
            type="bliss.blissrecruitmentapp.viewmodel.ShareActivityViewModel" />
    </data>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:cardElevation="10dp"
        >


        <ProgressBar
            android:id="@+id/activity_share_Progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:layout_gravity="center"
            android:visibility="@{safeUnbox(shareActivityViewModel.loading) ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{safeUnbox(shareActivityViewModel.loading) ? View.GONE : View.VISIBLE}"
            android:orientation="vertical">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/lbl_share_activity_invalid_share_img_description"
                app:srcCompat="@android:drawable/ic_menu_share" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title1"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/lbl_share_activity_sharing" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_medium"
                android:gravity="center"
                android:textSize="@dimen/content1"
                android:background="@color/grey"
                android:layout_marginBottom="@dimen/space_big"
                android:text="@{shareActivityViewModel.url}" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title3"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/space_big"
                android:text="@string/lbl_share_activity_share_with" />

            <EditText
                android:id="@+id/activity_share_mail_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_share_activity_enter_email"
                android:ems="10"
                android:inputType="textEmailAddress" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_share_activity_send"
                android:textColor="@color/white"
                android:background="@color/cardview_dark_background"
                android:onClick="shareLink"
                app:srcCompat="@android:drawable/ic_menu_view" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>